Resolves: tdf#118356 freeze/thaw mass language additions

Change-Id: Ifdc2247594d3ddeea0ca7b3b97eb6e392c54f95b